[package]
name        = "zengarden-sys"
description = "Self-contained PureData synthesis engine (FFI binding)"
version     = "0.1.0"
authors     = ["Tony Arcieri <bascule@gmail.com>"]
homepage    = "https://neobirth.org"
repository  = "https://github.com/NeoBirth/ZenGarden.rs"
edition     = "2018"
license     = "LGPL-3.0"
categories  = ["external-ffi-bindings", "multimedia::audio", "no-std"]
keywords    = ["audio", "music", "synthesis", "puredata", "zengarden"]

[dependencies]

[badges]
travis-ci = { repository = "NeoBirth/ZenGarden.rs" }
